removed unused files

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
     <link rel="manifest" href="img/favicon/site.webmanifest">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="js/script.js"></script>
@@ -418,21 +419,22 @@
 </div>
 <br>
 <!-- footer_start -->
-    <footer class="portfolio-footer">
-        <div class="left">
-            <img src="img/qa.webp" alt="YourLogo">
-        </div>
-        <div class="middle">
-            <nav>
-                <div class="copyright-text">© 2023 Portfolio by Siddhesh Govalkar</div> 
-                <div class="contact-info">siddheshgovalkar1967@gmail.com | +91 8070506024</div>
-            </nav>
-        </div>
-        <div class="right">
-            <a href="https://www.linkedin.com/in/siddhesh-govalkar-b65a43228/" target="_blank"><i class="fa fa-linkedin"></i></a>
-            <a href="https://twitter.com/_sid0502_" target="_blank"><i class="fa fa-twitter"></i></a>
-            <a href="https://api.whatsapp.com/send?phone=918070506024" target="_blank"><i class="fa fa-whatsapp"></i></a>    
-        </div>        
-    </footer>  
+<footer class="portfolio-footer">
+    <div class="left">
+        <img src="img/qa.webp" alt="YourLogo">
+    </div>
+    <div class="middle">
+        <nav>
+            <div class="copyright-text">© 2023 Portfolio by Siddhesh Govalkar</div>
+            <div class="contact-info">siddheshgovalkar1967@gmail.com | +91 8070506024</div>
+        </nav>
+    </div>
+    <div class="right">
+        <a href="https://www.linkedin.com/in/siddhesh-govalkar-b65a43228/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://twitter.com/_sid0502_" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=918070506024" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    </div>
+</footer>
+ 
 </body>
 </html>
