updated contact image & few fixes

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         <div class="row align-items-center">
             <div class="col-xl-5 col-md-6 col-lg-6">
                 <div class="appiontment_thumb d-none d-lg-block">
-                    <img src="img/qa.webp" alt="">
+                    <img src="img/contactme.png" alt="">
                 </div>
             </div>
             <div class="col-xl-6 offset-xl-1 col-md-6 col-md-12 col-lg-6">
@@ -402,9 +402,9 @@
     </div>
 </div>
 <br>
-<div id="thankYouPopup">
+<div id="thankYouPopup" class="popup-container">
     <span class="closeButton" onclick="closeThankYouPopup()"></span>
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center-w2c">
         <div class="check-container">
             <div class="check-background d-flex justify-content-center">
                 <svg viewBox="0 0 65 51" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -421,12 +421,15 @@
 <!-- footer_start -->
 <footer class="portfolio-footer">
     <div class="left">
-        <img src="img/qa.webp" alt="YourLogo">
+        <img src="img/logo2.webp" alt="YourLogo">
     </div>
     <div class="middle">
         <nav>
-            <div class="copyright-text">© 2023 Portfolio by Siddhesh Govalkar</div>
-            <div class="contact-info">siddheshgovalkar1967@gmail.com | +91 8070506024</div>
+            <div class="copyright-text">© 2024 Portfolio by Siddhesh Govalkar</div>
+            <div class="contact-info">
+                <a href="mailto:siddheshgovalkar1967@gmail.com">siddheshgovalkar1967@gmail.com</a> | 
+                <a href="tel:+918070506024">+91 8070506024</a>
+              </div>              
         </nav>
     </div>
     <div class="right">
