--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         <div class="row align-items-center">
             <div class="col-xl-5 col-md-6 col-lg-6">
                 <div class="appiontment_thumb d-none d-lg-block">
-                    <img src="img/contactme.png" alt="">
+                    <img src="img/contactme.png" alt="Contact Me Image">
                 </div>
             </div>
             <div class="col-xl-6 offset-xl-1 col-md-6 col-md-12 col-lg-6">
