--- a/index.html
+++ b/index.html
@@ -48,6 +48,32 @@
                     </div>
                 </div>
             </div>
+            <!-- Hamburger Menu Icon for Mobile -->
+            <div class="hamburger-menu">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+<!-- Mobile Menu -->
+<div class="mobile-menu">
+    <div class="mobile-menu-content">
+        <div class="logo-img">
+            <a href="index.html">
+                <img src="img/logo2.webp" alt="" style="width: 70%; margin-left:8px">
+            </a>
+        </div>
+                <nav>
+                    <ul id="mobile-navigation">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#project">Projects</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#contact_me">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
 <!-- Home page start -->
 <div class="slider_area ">
