--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="slider_text">
                             <h3>SIDDHESH <br>
                                 DHANANJAY GOVALKAR</h3>
-                            <p>Test Engineer at DgNote Technologies </p>
+                            <p>Test Engineer</p>
                             <a href="https://github.com/sidd-1967/Portfolio/raw/main/resume/siddhesh-resume.pdf" class="boxed-btn4 ">Download CV</a>
                         </div>
                     </div>
