updated home banner

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img src="img/logo2.webp" alt="" style="width: 70%; margin-left:8px">
+                                    <img src="img/logo2.webp" alt="logo2" style="width: 70%; margin-left:8px">
                                 </a>
                             </div>
                         </div>
@@ -59,7 +59,7 @@
     <div class="mobile-menu-content">
         <div class="logo-img">
             <a href="index.html">
-                <img src="img/logo2.webp" alt="" style="width: 70%; margin-left:8px">
+                <img src="img/logo2.webp" alt="logo2" style="width: 70%; margin-left:8px">
             </a>
         </div>
                 <nav>
@@ -85,7 +85,7 @@
                         <div class="slider_text">
                             <h3>SIDDHESH <br>
                                 DHANANJAY GOVALKAR</h3>
-                            <p>Test Engineer</p>
+                            <p>Quality Assurance Tester</p>
                             <a href="https://github.com/sidd-1967/Portfolio/raw/main/resume/siddhesh-resume.pdf" download>
                                 <button class="animated-button">
                                     <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
@@ -105,6 +105,7 @@
         </div>
     </div>
 </div>
+
 <!-- About Me -->
 <div class="about_area" id="about">
         <div class="container">
@@ -112,7 +113,7 @@
             <div class="col-xl-6 col-md-6">
                 <div class="single_about_info text-center">
                     <div class="about_thumb">
-                        <img src="img/manager.webp" alt="">
+                        <img src="img/manager.webp" alt="manager">
                     </div>
                     <h3>Skilled Quality Assurance Tester<br>
                         </h3>
@@ -127,7 +128,7 @@
                         <div class="about_thumb">
                             <div class="image_hover">
                                 <div class="hover_inner">
-                                    <img src="img/myimg.webp" alt="" style="border-radius: 50%; object-fit: fill;">
+                                    <img src="img/myimg.webp" alt="myimg" style="border-radius: 50%; object-fit: fill;">
                                 </div>
                             </div>
                         </div>
