--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
         </div>
 </header>
 <!-- Home page start -->
-<div class="slider_area ">
+<!-- Home page start -->
+<div class="slider_area">
     <div class="slider_area_inner slider_bg_1 d-flex align-items-center">
         <div class="container">
             <div class="row">
@@ -86,18 +87,16 @@
                             <h3>SIDDHESH <br>
                                 DHANANJAY GOVALKAR</h3>
                             <p>Quality Assurance Tester</p>
-                            <a href="https://github.com/sidd-1967/Portfolio/raw/main/resume/siddhesh-resume.pdf" download>
-                                <button class="animated-button">
-                                    <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"></path>
-                                    </svg>
-                                    <span class="text">Download Resume</span>
-                                    <span class="circle"></span>
-                                    <svg viewBox="0 0 24 24" class="arr-1" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"></path>
-                                    </svg>
-                                </button>
-                            </a>   
+                            <button id="downloadButton" class="animated-button">
+                                <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"></path>
+                                </svg>
+                                <span class="text">Download Resume</span>
+                                <span class="circle"></span>
+                                <svg viewBox="0 0 24 24" class="arr-1" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"></path>
+                                </svg>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -105,6 +104,7 @@
         </div>
     </div>
 </div>
+
 
 <!-- About Me -->
 <div class="about_area" id="about">
