--- a/index.html
+++ b/index.html
@@ -489,8 +489,7 @@
         <nav>
             <div class="copyright-text">© 2024 Portfolio by Siddhesh Govalkar</div>
             <div class="contact-info">
-                <a href="mailto:siddheshgovalkar1967@gmail.com">siddheshgovalkar1967@gmail.com</a> | 
-                <a href="tel:+918070506024">+91 8070506024 </a>
+                <a href="mailto:siddheshgovalkar1967@gmail.com">siddheshgovalkar1967@gmail.com</a>
               </div>              
         </nav>
     </div>
