--- a/index.html
+++ b/index.html
@@ -147,16 +147,25 @@
         </div>
         <div class="card-container">
             <div class="card">
-                <img class="card__image" src="img/lpu-logo.webp" alt="LPU Logo">
+                <img class="card__image" src="img/ssc-logo.webp" alt="ssc-logo">
                 <div class="card__content">
-                  <p class="card__title">Master of Computer Application</p>
-                  <div class="card__description">
-                    <p>Lovely Professional University</p>
-                    <p>Currently Learning</p>
+                    <p class="card__title">SSC</p>
+                    <div class="card__description">
+                      <p>St Lawrance High School </p>
+                      <p>Percentage: 60.20%</p>
+                    </div>
                   </div>
-                </div>
-              </div>
-              
+            </div>
+            <div class="card">
+                <img class="card__image" src="img/hsc-logo.webp" alt="hsc-logo">
+                <div class="card__content">
+                    <p class="card__title">HSC</p>
+                    <div class="card__description">
+                      <p>Navjeevan JR College of Commere and Science</p>
+                      <p>Percentage: 50.00%</p>
+                    </div>
+                  </div>
+            </div>
             <div class="card">
                 <img class="card__image" src="img/nmfc-logo.webp" alt="nmfc-logo">
                 <div class="card__content">
@@ -166,28 +175,17 @@
                       <p>CGPI: 8.38</p>
                     </div>
                   </div>
+            </div>
+          <div class="card">
+            <img class="card__image" src="img/lpu-logo.webp" alt="LPU Logo">
+            <div class="card__content">
+              <p class="card__title">Master of Computer Application</p>
+              <div class="card__description">
+                <p>Lovely Professional University</p>
+                <p>Currently Learning</p>
               </div>
-              <div class="card">
-                <img class="card__image" src="img/hsc-logo.webp" alt="hsc-logo">
-                <div class="card__content">
-                    <p class="card__title">HSC</p>
-                    <div class="card__description">
-                      <p>Navjeevan JR College of Commere and Science</p>
-                      <p>Percentage: 50.00%</p>
-                    </div>
-                  </div>
-              </div>
-              <div class="card">
-                <img class="card__image" src="img/ssc-logo.webp" alt="ssc-logo">
-                <div class="card__content">
-                    <p class="card__title">SSC</p>
-                    <div class="card__description">
-                      <p>St Lawrance High School </p>
-                      <p>Percentage: 60.20%</p>
-                    </div>
-                  </div>
-              </div>
-          </div>
+            </div>
+        </div>
 <!-- Programming Skills Start -->
         <div id="skills">
             <div class="container">
@@ -396,12 +394,12 @@
                                 <h3>Internship (Jun 2022 - Nov 2022)</h3>
                                 <p class="mb-4">
                                     <ul class="bullet-list">
-                                        <li>Completed a 6-month internship at Brained, specializing in Quality Assurance.</li>
-                                        <li>Gained hands-on experience in testing methodologies, and working on websites across diverse domains.</li>
-                                        <li>Executed test case design using multiple programming languages, ensuring versatility.</li>
-                                        <li>Collaborated on Android and iOS applications, expanding testing expertise to mobile platforms.</li>
-                                        <li>Worked alongside seasoned professionals to enhance skills in defect tracking.</li>
-                                        <li>Developed a strong foundation in QA practices, ensuring meticulous attention to detail.</li>
+                                        <li>Completed a 6-month internship at Brained, specializing in Quality Assurance.</li><br>
+                                        <li>Gained hands-on experience in testing methodologies, and working on websites across diverse domains.</li><br>
+                                        <li>Executed test case design using multiple programming languages, ensuring versatility.</li><br>
+                                        <li>Collaborated on Android and iOS applications, expanding testing expertise to mobile platforms.</li><br>
+                                        <li>Worked alongside seasoned professionals to enhance skills in defect tracking.</li><br>
+                                        <li>Developed a strong foundation in QA practices, ensuring meticulous attention to detail.</li><br>
                                         <li>Cultivated a passion for ensuring software excellence through rigorous testing.</li>
                                     </ul>
                                 </p>
@@ -416,10 +414,10 @@
                             <h3>Test Engineer (Dec 2022 – Present)</h3>
                             <p class="mb-4">
                                 <ul class="bullet-list">
-                                    <li>Took the lead in creating a handy automation tool, making testing easier and saving valuable time.</li>
-                                    <li>Coordinated with various companies to ensure our systems work seamlessly together, focusing on smooth collaboration and integration testing.</li>
-                                    <li>Used JMeter to check how well our systems handle different user loads, ensuring they perform smoothly.</li>
-                                    <li>Played a key role in troubleshooting issues identified during testing phases, contributing to the delivery of high-quality software.</li>
+                                    <li>Took the lead in creating a handy automation tool, making testing easier and saving valuable time.</li><br>
+                                    <li>Coordinated with various companies to ensure our systems work seamlessly together, focusing on smooth collaboration and integration testing.</li><br>
+                                    <li>Used JMeter to check how well our systems handle different user loads, ensuring they perform smoothly.</li><br>
+                                    <li>Played a key role in troubleshooting issues identified during testing phases, contributing to the delivery of high-quality software.</li><br>
                                     <li>Continued learning and staying updated on the latest tools and techniques in quality assurance to bring innovative solutions to the team.</li>
                                 </ul>
                             </p>
