--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
               </div>
             </div>
         </div>
+        </div>
 <!-- Programming Skills Start -->
         <div id="skills">
             <div class="container">
