--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                     </div>
                     <h3>Skilled Quality Assurance Tester<br>
                         </h3>
-                            <p>As an experienced QA Tester, I leverage Python, SQL, JavaScript, and Selenium for exceptional automation testing. 
-                                <br>My commitment to software quality is evident in detailed manual testing and adept defect detection.  
-                                <br>Specializing in API load testing, I thrive in collaborative environments, staying current on trends through continuous learning to deliver cutting-edge solutions for superior software quality.
+                            <p>As an experienced Test Engineer, I excel in crafting and implementing robust testing strategies. Proficient in various programming languages, 
+                                <br>I'm dedicated to ensuring software quality through meticulous analysis and automation.   
+                                <br>Eager to contribute expertise to elevate testing processes.
                             </p>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                         <div class="about_thumb">
                             <div class="image_hover">
                                 <div class="hover_inner">
-                                    <img src="img/myimg.webp" alt="myimg" style="border-radius: 50%; object-fit: fill;">
+                                    <img src="img/myimg.webp" alt="myimg" style="border-radius: 20px; object-fit: fill;">
                                 </div>
                             </div>
                         </div>
@@ -145,7 +145,7 @@
         <div class="section_title text-center mb-60">
             <h3>Education</h3>
         </div>
-        <div class="card-container">
+    <div class="card-container">
             <div class="card">
                 <img class="card__image" src="img/ssc-logo.webp" alt="ssc-logo">
                 <div class="card__content">
@@ -186,7 +186,7 @@
               </div>
             </div>
         </div>
-        </div>
+    </div>
 <!-- Programming Skills Start -->
         <div id="skills">
             <div class="container">
@@ -219,13 +219,13 @@
                             <div class="col-6 col-md-4 col-lg-4 col-xl-2" style="margin-bottom: 40px;">
                                 <div class="single_loyers text-center">
                                     <i class="fas fa-cog fa-3x"></i>
-                                    <h3 style="margin-top: 20px;">API Testing</h3>
+                                    <h3 style="margin-top: 20px;"><span>API</span><br>Testing</h3>
                                 </div>
                             </div>
                             <div class="col-6 col-md-4 col-lg-4 col-xl-2" style="margin-bottom: 15px;">
                                 <div class="single_loyers text-center">
                                     <i class="fas fa-tachometer-alt fa-3x"></i>
-                                    <h3 style="margin-top: 20px;">Load Testing</h3>
+                                    <h3 style="margin-top: 20px;"><span>Load</span><br>Testing</h3>
                                 </div>
                             </div>
                             <div class="col-6 col-md-4 col-lg-4 col-xl-2" style="margin-bottom: 40px;">
@@ -240,8 +240,8 @@
                                     <h3 style="margin-top: 20px;">Security Testing</h3>
                                 </div>
                             </div>
-                            <!-- Add more technical skills with icons if required -->
                         </div>
+                        
                     </div>
                 </div>
                 <!-- Soft Skills -->
@@ -380,12 +380,12 @@
         <!-- Experience Start -->
         <div class="container-xxl py-5" id="experience">
             <div class="container">
-                <h2 class="project-heading-3">Experience</h2>
+                <h2 class="project-heading-3">Professional Experience</h2>
                 <div class="bg-light rounded">
                     <div class="row g-0">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
                             <div class="position-relative h-100">
-                                <img class="position-absolute w-100 h-100 rounded" src="img/brained.webp" style="object-fit: contain;">
+                                <img class="position-absolute w-100 h-100 rounded image-responsive-first" src="img/brained.webp" style="object-fit: contain;">
                                 </a>
                             </div>
                         </div>
@@ -426,7 +426,7 @@
                     </div>
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
                         <div class="position-relative h-100">
-                                <img class="position-absolute w-100 h-100 rounded" src="img/DgNote_Logo.webp" style="object-fit: contain;">
+                                <img class="position-absolute w-100 h-100 rounded image-responsive-second image-center" src="img/DgNote_Logo.webp" style="object-fit: contain;">
                             </a>
                         </div>
                     </div>
