--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                         </p>
                     </div>
                     <div class="experience-images">
-                        <img src="img/DgNote_Logo.webp" alt="Experience Image" style="object-fit: contain;">
+                        <img src="img/DgNote_Logo1.webp" alt="Experience Image" style="object-fit: contain;">
                     </div>
                 </div>
             </div>
